fix: shellcheck on linux only

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ before_script:
   - git clone https://github.com/asdf-vm/asdf.git
   - . asdf/asdf.sh
 script:
-  - bash -c 'shopt -s globstar nullglob; shellcheck bin/*'
+  - bash -c '[ "Linux" = $(uname) ] && shellcheck bin/*'
   - asdf plugin-add ibmcloud ./
   - asdf list-all ibmcloud
   - asdf plugin-test ibmcloud ./ 'ibmcloud --version'
